# TF2OCL

./: CMakeLists.txt  LICENSE  README.md
include/: Graph.h  model.h  tensor.h
include/Layers/: Add.h  AddCL.h  BatchNormalization.h  BatchNormalizationCL.h  Concatenate.h  ConcatenateCL.h  Conv2D.h  Conv2DCL.h  Conv2DPCA.h  Conv2DTranspose.h  Conv2DTransposeCL.h  Dense.h  DenseCL.h  DepthToSpace.h  DistributedConv2D.h  Flatten.h  GlobalAvgPooling2D.h  Input.h  Layer.h  LayerCL.h  LayerFactory.h  MaxPooling2D.h  MaxPooling2DCL.h  ReLU.h  ReLUCL.h  ZeroPadding2D.h
include/OpenCL/: clAdd.h  clBatchNorm.h  clChannelFirstOp.h  clConcate.h  clContext.h  clConv2D.h  clConv2DTranspose.h  clMatVecMul.h  clMaxPool2D.h  clOperation.h  clReLU.h
python/: tf2json.ipynb
python/.ipynb_checkpoints/: tf2json-checkpoint.ipynb
src/: Add.cxx  AddCL.cxx  BatchNormalization.cxx  BatchNormalizationCL.cxx  Concatenate.cxx  ConcatenateCL.cxx  Conv2D.cxx  Conv2DCL.cxx  Conv2DPCA.cxx  Conv2DTranspose.cxx  Conv2DTransposeCL.cxx  Dense.cxx  DenseCL.cxx  DepthToSpace.cxx  DistributedConv2D.cxx  Flatten.cxx  GlobalAvgPooling2D.cxx  Graph.cxx  Input.cxx  Layer.cxx  LayerFactory.cxx  MaxPooling2D.cxx  MaxPooling2DCL.cxx  ReLU.cxx  ReLUCL.cxx  ZeroPadding2D.cxx  main.cxx  model.cxx  tensor.cxx
src/OpenCL/: clAdd.cl  clAdd.cxx  clBatchNorm.cl  clBatchNorm.cxx  clChannelFirstOp.cl  clChannelFirstOp.cxx  clConcate.cl  clConcate.cxx  clContext.cxx  clConv2D.cl  clConv2D.cxx  clConv2DTranspose.cl  clConv2DTranspose.cxx  clMatVecMul.cl  clMatVecMul.cxx  clMaxPool2D.cl  clMaxPool2D.cxx  clOperation.cxx  clReLU.cl  clReLU.cxx
